prvé úpravy ohľadom zobrazovania/pridávania nových Taskov na GUI (angular)

--- a/ui/src/app/app/components/body/body.component.html
+++ b/ui/src/app/app/components/body/body.component.html
@@ -1,5 +1,1 @@
-<p>
-  body works!
-</p>
-<wn-new-task (onAddNewTask)="addTask($event)"></wn-new-task>
-<wn-tasks-list [tasks]="tasks"></wn-tasks-list>
+<wn-task-view></wn-task-view>
