--- a/ui/src/app/app/components/task/task.component.html
+++ b/ui/src/app/app/components/task/task.component.html
@@ -1,1 +1,5 @@
-<p>{{task.text}} with priority {{task.priority}}</p>
+<div style="border-bottom: 1px solid cadetblue; display: flow-root;">
+  <div style="float: left; width: 30%; min-width: 200px">{{task.text}}</div>
+  <div style="float: left; width: 40%; min-width: 200px">{{task.priority}}</div>
+  <div style="float: left; width: 30%; min-width: 200px">{{task.status}}</div>
+</div>
