--- a/ui/src/app/app/components/new-task/new-task.component.html
+++ b/ui/src/app/app/components/new-task/new-task.component.html
@@ -1,6 +1,19 @@
-<div>
-  <label>
-    <input [(ngModel)]="newTask.text">
-    <input [(ngModel)]="newTask.priority">
-  </label>
-</div>
+<form novalidate #form="ngForm">
+  <div class="new-task-div" style="display: flow-root">
+    <label style="width: 100%">Create new task:</label>
+    <div style="margin-left: 20px; margin-top: 5px; float: left; width: 100%">
+      <label style="width: 30%; float: left; min-width: 200px">
+        Task text:
+        <input placeholder="Add task text..." name="taskText" [(ngModel)]="newTask.text" required>
+      </label>
+      <label style="width: 40%; float: left; min-width: 200px">
+        Task priority:
+        <input placeholder="Add task priority..." name="taskPriority" [(ngModel)]="newTask.priority" required>
+      </label>
+      <label style="width: 30%; float: left; min-width: 200px">
+        Task status:
+        <input placeholder="Add task status..." name="taskStatus" [(ngModel)]="newTask.status" required>
+      </label>
+    </div>
+  </div>
+</form>
