menší tuning GUI

--- a/ui/src/app/app/components/new-task/new-task.component.html
+++ b/ui/src/app/app/components/new-task/new-task.component.html
@@ -3,15 +3,15 @@
     <label style="width: 100%">Create new task:</label>
     <div style="margin-left: 20px; margin-top: 5px; float: left; width: 100%">
       <label style="width: 30%; float: left; min-width: 200px">
-        Task text:
+        Text:
         <input placeholder="Add task text..." name="taskText" [(ngModel)]="newTask.text" required>
       </label>
       <label style="width: 40%; float: left; min-width: 200px">
-        Task priority:
+        Priority:
         <input placeholder="Add task priority..." name="taskPriority" [(ngModel)]="newTask.priority" required>
       </label>
       <label style="width: 30%; float: left; min-width: 200px">
-        Task status:
+        Status:
         <input placeholder="Add task status..." name="taskStatus" [(ngModel)]="newTask.status" required>
       </label>
     </div>
