--- a/ui/src/app/app/components/task/task.component.html
+++ b/ui/src/app/app/components/task/task.component.html
@@ -1,5 +1,17 @@
-<div style="border-bottom: 1px solid cadetblue; display: flow-root;">
-  <div style="float: left; width: 30%; min-width: 200px">{{task.text}}</div>
-  <div style="float: left; width: 40%; min-width: 200px">{{task.priority}}</div>
-  <div style="float: left; width: 30%; min-width: 200px">{{task.status}}</div>
+<div style="border-bottom: 1px solid cadetblue; display: flow-root; width: 100%;">
+  <div class="task-cell text-cell">
+    <div>
+      {{task.text}}
+    </div>
+  </div>
+  <div class="task-cell priority-cell">
+    <div>
+      {{task.priority}}
+    </div>
+  </div>
+  <div class="task-cell status-cell">
+    <div>
+      {{task.status}}
+    </div>
+  </div>
 </div>
