ďalší menší tuning GUI

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,4 +1,8 @@
-<wn-header></wn-header>
-<wn-body></wn-body>
-<wn-footer></wn-footer>
+<div style="width: 100%; height: 100%; position: fixed; background-color: rgba(241, 244, 248, 1);">
+  <div style="margin: 8px">
+    <wn-header></wn-header>
+    <wn-body></wn-body>
+    <wn-footer></wn-footer>
+  </div>
+</div>
 
