--- a/ui/src/app/app/components/header/header.component.html
+++ b/ui/src/app/app/components/header/header.component.html
@@ -1,3 +1,10 @@
-<p>
-  header works!
-</p>
+<div class="header-base">
+  <div style="width: 100%;">
+    <div style="float: right">
+      About
+    </div>
+    <div style="float: right">
+      Licence
+    </div>
+  </div>
+</div>
