--- a/ui/src/app/app/components/task/task.component.html
+++ b/ui/src/app/app/components/task/task.component.html
@@ -1,15 +1,15 @@
-<div style="border-bottom: 1px solid cadetblue; display: flow-root; width: 100%;">
+<div style="border-bottom: 1px solid cadetblue; display: flex; width: 100%;">
   <div class="task-cell text-cell">
     <div>
       {{task.text}}
     </div>
   </div>
-  <div class="task-cell priority-cell">
+  <div class="task-cell priority-cell test">
     <div>
       {{task.priority}}
     </div>
   </div>
-  <div class="task-cell status-cell">
+  <div class="task-cell status-cell test">
     <div>
       {{task.status}}
     </div>
