--- a/ui/src/app/app/components/tasks-list/tasks-list.component.html
+++ b/ui/src/app/app/components/tasks-list/tasks-list.component.html
@@ -1,14 +1,14 @@
 <div style="display: flow-root; margin-top: 10px" *ngIf="tasks.length > 0">
-  <div style="width: 100%; margin-bottom: -1px;">
-    <div class="tab-element">
+  <div style="width: 100%; margin-bottom: -2px;">
+    <div class="tasks-tab-element">
       Tasks list
     </div>
   </div>
-  <div style="padding: 10px; border: 1px solid cadetblue">
-    <div style="float:left; width: 100%;">
-      <div style="float: left; width: 74%; background-image: linear-gradient(to right, rgba(34,209,255,0.7), rgba(34,209,255,0.3));">Text</div>
-      <div style="float: left; width: 13%; background-image: linear-gradient(to right, rgba(34,209,255,0.7), rgba(34,209,255,0.3));">Priority</div>
-      <div style="float: left; width: 13%; background-image: linear-gradient(to right, rgba(34,209,255,0.7), rgba(34,209,255,0.3));">Status</div>
+  <div class="tasks-table">
+    <div style="float:left; width: 100%; display: flex;">
+      <div style="float: left; flex: 1 1 auto; background-image: linear-gradient(to right, cornflowerblue, rgba(34,209,255,0.3));">Text</div>
+      <div style="float: left; width: 100px; background-image: linear-gradient(to right, cornflowerblue, rgba(34,209,255,0.3));">Priority</div>
+      <div style="float: left; width: 100px; background-image: linear-gradient(to right, cornflowerblue, rgba(34,209,255,0.3));">Status</div>
     </div>
     <wn-task *ngFor="let task of tasks" [task]="task"></wn-task>
   </div>
