--- a/ui/src/app/app/components/new-task/new-task.component.html
+++ b/ui/src/app/app/components/new-task/new-task.component.html
@@ -1,19 +1,25 @@
 <form novalidate #form="ngForm">
   <div class="new-task-div" style="display: flow-root">
-    <label style="width: 100%">Create new task:</label>
-    <div style="margin-left: 20px; margin-top: 5px; float: left; width: 100%">
-      <label style="width: 30%; float: left; min-width: 200px">
+    <div style="width: 100%">
+      <label>Create new task:</label>
+    </div>
+    <div style="margin-top: 5px; float: left; width: 100%">
+      <label style="margin-left: 20px; width: 30%; float: left; min-width: 200px">
         Text:
         <input placeholder="Add task text..." name="taskText" [(ngModel)]="newTask.text" required>
       </label>
-      <label style="width: 40%; float: left; min-width: 200px">
+    </div>
+    <div style="float: left; width: 100%; margin: 5px 0 0 0;">
+      <label style="margin-left: 20px; width: 40%; float: left; min-width: 200px">
         Priority:
         <input placeholder="Add task priority..." name="taskPriority" [(ngModel)]="newTask.priority" required>
       </label>
-      <label style="width: 30%; float: left; min-width: 200px">
-        Status:
-        <input placeholder="Add task status..." name="taskStatus" [(ngModel)]="newTask.status" required>
-      </label>
+      <select name="taskStatus" [(ngModel)]="newTask.status" required>
+        <option *ngFor="let status of statuses" [value]="status">{{status}}</option>
+      </select>
+    </div>
+    <div style="float: left; width: 100%;">
+      <button style="float: right;" (click)="checkAndAddCard(newTask.text, newTask.priority, newTask.status)">Create task</button>
     </div>
   </div>
 </form>
