ďalší menší tuning GUI

--- a/ui/src/app/app/components/header/header.component.html
+++ b/ui/src/app/app/components/header/header.component.html
@@ -1,9 +1,15 @@
-<div class="header-base">
-  <div style="width: 100%;">
-    <div style="float: right">
+<div style="width: 100%;
+    float: left;
+    padding: 15px 0 15px 0;
+    display: flex;">
+  <div style="float: left; background-color: white; border: 2px solid cornflowerblue;">
+    <img src="assets/img/wn_icon_64x64.png" alt="Logo"/>
+  </div>
+  <div class="header-base">
+    <div class="menu-item">
       About
     </div>
-    <div style="float: right">
+    <div class="menu-item">
       Licence
     </div>
   </div>
