--- a/ui/src/app/app/components/header/header.component.css
+++ b/ui/src/app/app/components/header/header.component.css
@@ -1,7 +1,12 @@
 .header-base {
-  width: 100%;
-  margin: 8px 0 16px 0;
-  float: left;
+  flex: 1 1 auto;
   background-color: cornflowerblue;
   padding: 15px 0 15px 0;
+}
+
+.menu-item {
+  font-size: 20px;
+  float: right;
+  margin-top: 10px;
+  margin-right: 30px;
 }
