--- a/ui/src/app/app/components/new-task/new-task.component.html
+++ b/ui/src/app/app/components/new-task/new-task.component.html
@@ -3,17 +3,16 @@
     <div style="width: 100%">
       <label>Create new task:</label>
     </div>
-    <div style="margin-top: 5px; float: left; width: 100%">
+    <div style="margin-top: 5px; float: left;">
       <label style="margin-left: 20px; width: 30%; float: left; min-width: 200px">
         Text:
         <input placeholder="Add task text..." name="taskText" [(ngModel)]="newTask.text" required>
       </label>
     </div>
-    <div style="float: left; width: 100%; margin: 5px 0 0 0;">
-      <label style="margin-left: 20px; width: 40%; float: left; min-width: 200px">
-        Priority:
-        <input placeholder="Add task priority..." name="taskPriority" [(ngModel)]="newTask.priority" required>
-      </label>
+    <div style="float: left; margin: 5px 0 0 0;">
+      <select name="taskPriority" [(ngModel)]="newTask.priority" required>
+        <option *ngFor="let priority of priorities" [value]="priority">{{priority}}</option>
+      </select>
       <select name="taskStatus" [(ngModel)]="newTask.status" required>
         <option *ngFor="let status of statuses" [value]="status">{{status}}</option>
       </select>
