--- a/ui/src/app/app/components/task/task.component.html
+++ b/ui/src/app/app/components/task/task.component.html
@@ -1,4 +1,4 @@
-<div style="border-bottom: 1px solid cadetblue; display: flex; width: 100%;">
+<div class="task-wrapper">
   <div class="task-cell text-cell">
     <div>
       {{task.text}}
