--- a/ui/src/app/app/components/tasks-list/tasks-list.component.html
+++ b/ui/src/app/app/components/tasks-list/tasks-list.component.html
@@ -1,11 +1,11 @@
-<div style="display: flow-root; margin-top: 10px" *ngIf="tasks.length > 0">
-  <div style="width: 100%; margin-bottom: -2px;">
+<div class="task-list-wrapper" *ngIf="tasks.length > 0">
+  <div class="task-list-tabs">
     <div class="tasks-tab-element">
       Tasks list
     </div>
   </div>
   <div class="tasks-table">
-    <div style="float:left; width: 100%; display: flex;">
+    <div class="task-list-header">
       <div class="tasks-column-header textColumn">Text</div>
       <div class="tasks-column-header">Priority</div>
       <div class="tasks-column-header">Status</div>
