--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div style="width: 100%; height: 100%; position: fixed; background-color: rgba(241, 244, 248, 1);">
-  <div style="margin: 8px">
+<div id="whole-page">
+  <div id="page-content">
     <wn-header></wn-header>
     <wn-body></wn-body>
     <wn-footer></wn-footer>
