--- a/ui/src/app/app/components/header/header.component.css
+++ b/ui/src/app/app/components/header/header.component.css
@@ -11,3 +11,16 @@
   margin-right: 30px;
   font-family: "Times New Roman", Times, serif;
 }
+
+#header-wrapper {
+  width: 100%;
+  float: left;
+  padding: 15px 0 15px 0;
+  display: flex;
+}
+
+.header-image {
+  float: left;
+  background-color: white;
+  border: 2px solid cornflowerblue;
+}
