--- a/ui/src/app/app/components/header/header.component.html
+++ b/ui/src/app/app/components/header/header.component.html
@@ -1,8 +1,5 @@
-<div style="width: 100%;
-    float: left;
-    padding: 15px 0 15px 0;
-    display: flex;">
-  <div style="float: left; background-color: white; border: 2px solid cornflowerblue;">
+<div id="header-wrapper">
+  <div class="header-image">
     <img src="assets/img/wn_icon_64x64.png" alt="Logo"/>
   </div>
   <div class="header-base">
