--- a/ui/src/app/app/components/tasks-list/tasks-list.component.css
+++ b/ui/src/app/app/components/tasks-list/tasks-list.component.css
@@ -20,9 +20,25 @@
 .tasks-column-header {
   float: left;
   width: 100px;
-  background-image: linear-gradient(to right, cornflowerblue, rgba(100,149,237,0.3));
+  background-image: linear-gradient(to right, rgba(100,149,237,0.8), rgba(100,149,237,0.3));
 }
 
 .tasks-column-header.textColumn {
   flex: 1 1 auto;
+}
+
+.task-list-wrapper {
+  display: flow-root;
+  margin-top: 10px;
+}
+
+.task-list-tabs {
+  width: 100%;
+  margin-bottom: -2px;
+}
+
+.task-list-header {
+  float: left;
+  width: 100%;
+  display: flex;
 }
