--- a/ui/src/styles/styles.scss
+++ b/ui/src/styles/styles.scss
@@ -1,3 +1,39 @@
 body {
   margin: 0;
 }
+
+div.left {
+  float: left;
+}
+
+div.full {
+  width: 100%;
+}
+
+button {
+  border-radius: 5px;
+  border-color: cornflowerblue;
+  float: right;
+  background-image: linear-gradient(to top, rgba(100, 149, 237, 0.5), rgba(100, 149, 237, 0.2));
+  background-color: white;
+}
+
+button:hover {
+  border-radius: 5px;
+  border-color: cornflowerblue;
+  float: right;
+  background-image: linear-gradient(to top, rgba(100, 149, 237, 0.8), rgba(100, 149, 237, 0.5));
+  background-color: white;
+  cursor: pointer;
+}
+
+#whole-page {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(241, 244, 248, 1);
+}
+
+#page-content {
+  margin: 8px;
+}
