--- a/ui/src/app/app/components/footer/footer.component.html
+++ b/ui/src/app/app/components/footer/footer.component.html
@@ -1,3 +1,11 @@
-<p>
-  footer works!
-</p>
+<div class="footer-wrapper">
+  <div class="left" style="height: 32px; margin: 0 0 0 8px;">
+    <img src="assets/img/GitHub-Mark-32px.png" alt="GitHub logo"/>
+  </div>
+  <div class="left" style="line-height: 32px; margin: 0 0 0 5px;">
+    <a href="https://github.com/habalam/work-notes">GitHub project</a>
+  </div>
+  <div style="float: right; line-height: 32px; margin: 0 5px 0 0;">
+    Powered by <a href="https://azure.microsoft.com/en-us/">Microsoft Azure</a>.
+  </div>
+</div>
