ďalší menší tuning GUI

--- a/ui/src/app/app/components/new-task/new-task.component.css
+++ b/ui/src/app/app/components/new-task/new-task.component.css
@@ -36,7 +36,7 @@
 }
 
 .parameter-wrapper {
-  margin: 0 10px 0 0;
+  margin: 0 50px 0 0;
   float: left;
 }
 
@@ -50,4 +50,10 @@ select.new-task-selectbox {
   float: left;
   width: 100%;
   margin: 10px 0 0 0;
+}
+
+.textarea-content {
+  width: 100%;
+  display: flex;
+  margin: 0 0 0 20px
 }
