--- a/ui/src/app/app/components/tasks-list/tasks-list.component.html
+++ b/ui/src/app/app/components/tasks-list/tasks-list.component.html
@@ -8,7 +8,7 @@
     <div class="task-list-header">
       <div class="tasks-column-header textColumn">Text</div>
       <div class="tasks-column-header">Priority</div>
-      <div class="tasks-column-header">Status</div>
+      <div class="tasks-column-header">State</div>
     </div>
     <wn-task *ngFor="let task of tasks" [task]="task"></wn-task>
   </div>
