--- a/ui/src/app/app/components/task/task.component.html
+++ b/ui/src/app/app/components/task/task.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="task-cell status-cell test">
     <div>
-      {{task.status}}
+      {{task.state}}
     </div>
   </div>
 </div>
