--- a/ui/src/app/app/components/task-view/task-view.component.html
+++ b/ui/src/app/app/components/task-view/task-view.component.html
@@ -1,2 +1,2 @@
-<wn-new-task (onAddNewTask)="addTask($event)"></wn-new-task>
+<wn-new-task (onAddNewTask)="refreshTasks()"></wn-new-task>
 <wn-tasks-list [tasks]="tasks"></wn-tasks-list>
