prerobenie komponentu na vytvárania nových Task-ov (+ drobné úpravy a refactoring)

--- a/ui/src/app/app/components/footer/footer.component.css
+++ b/ui/src/app/app/components/footer/footer.component.css
@@ -6,3 +6,19 @@
   padding: 5px 0 5px 0;
   border-top: 2px solid cornflowerblue;
 }
+
+.github-icon {
+  height: 32px;
+  margin: 0 0 0 8px;
+}
+
+.github-link {
+  line-height: 32px;
+  margin: 0 0 0 5px;
+}
+
+.powered-by {
+  float: right;
+  line-height: 32px;
+  margin: 0 8px 0 0;
+}
