--- a/ui/src/app/app/components/header/header.component.html
+++ b/ui/src/app/app/components/header/header.component.html
@@ -2,6 +2,11 @@
   <div class="header-image">
     <img src="assets/img/wn_icon_64x64.png" alt="Logo"/>
   </div>
+  <div class="header-title-background">
+    <div class="header-title">
+      Work-notes
+    </div>
+  </div>
   <div class="header-base">
     <div class="menu-item">
       About
