--- a/ui/src/app/app/components/task/task.component.html
+++ b/ui/src/app/app/components/task/task.component.html
@@ -1,17 +1,24 @@
-<div class="task-wrapper">
-  <div class="task-cell text-cell">
-    <div>
-      {{task.text}}
+<form #form="ngForm" novalidate>
+  <div class="task-wrapper">
+    <div class="task-data">
+      <div class="task-cell text-cell">
+        <div>
+          {{task.text}}
+        </div>
+      </div>
+      <div class="task-cell priority-cell test">
+        <div>
+          {{task.priority}}
+        </div>
+      </div>
+      <div class="task-cell status-cell test">
+        <div>
+          {{task.state}}
+        </div>
+      </div>
+    </div>
+    <div class="task-change">
+      <button (click)="deleteTask()">Delete task</button>
     </div>
   </div>
-  <div class="task-cell priority-cell test">
-    <div>
-      {{task.priority}}
-    </div>
-  </div>
-  <div class="task-cell status-cell test">
-    <div>
-      {{task.state}}
-    </div>
-  </div>
-</div>
+</form>
