--- a/ui/src/app/app/components/tasks-list/tasks-list.component.html
+++ b/ui/src/app/app/components/tasks-list/tasks-list.component.html
@@ -1,6 +1,4 @@
-<!--TODO vyriešiť problém s volaním metódy length na tasks, ktora v danom okamihu este nie je naplnena - nemal by som toto presunuť
-rovno do task-view componentu, kde ešte tasky neprichadzaju cez input-->
-<div class="task-list-wrapper" *ngIf="tasks.length > 0">
+<div class="task-list-wrapper">
   <div class="task-list-tabs">
     <div class="tasks-tab-element">
       Tasks list
