--- a/ui/src/app/app/components/new-task/new-task.component.html
+++ b/ui/src/app/app/components/new-task/new-task.component.html
@@ -1,5 +1,5 @@
 <form #form="ngForm" novalidate>
-  <div class="action_button">
+  <div class="new-task-wrapper">
     <div class="new-task-div">
       <div class="new-task-title">
         <label>Create new task</label>
