--- a/ui/src/app/app/components/tasks-list/tasks-list.component.css
+++ b/ui/src/app/app/components/tasks-list/tasks-list.component.css
@@ -19,8 +19,11 @@
 
 .tasks-column-header {
   float: left;
-  width: 100px;
+  width: 90px;
   background-image: linear-gradient(to right, rgba(100,149,237,0.8), rgba(100,149,237,0.3));
+  padding: 5px 0 5px 10px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .tasks-column-header.textColumn {
@@ -32,6 +35,7 @@
   width: 100%;
   display: flow-root;
   margin-top: 10px;
+  color: darkslategray;
 }
 
 .task-list-tabs {
