vyriešenie problému s deserializáciou LocalDateTime (aj keď za cenu dotiahnutia "Json" anotácií do domain modulu - zatiaľ) + upravenie/opravenie logovania taskov (.toString) a vracanie odpovedí na Post requesty (RestController)

--- a/ui/src/app/app/components/new-task/new-task.component.html
+++ b/ui/src/app/app/components/new-task/new-task.component.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="full-element-row">
-        <button (click)="checkAndAddCard()">Create task</button>
+        <button (click)="checkAndAddTask()">Create task</button>
       </div>
     </div>
   </div>
